...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlanActivity">

    <Button
        android:id="@+id/directions_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onDirectionsClicked"
        android:text="Directions"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/route_summary"
        app:layout_constraintVertical_bias="0.278" />
...
